fix text overflow bug

--- a/frontend/src/app/modules/home/issues/issue-details/issue-details-page/issue-details-page.component.sass
+++ b/frontend/src/app/modules/home/issues/issue-details/issue-details-page/issue-details-page.component.sass
@@ -14,7 +14,7 @@
         border: none
         border-radius: 100%
     h2
-        @include text-overflow-nowrap
+        @include text-overflow-x-nowrap
         max-width: 450px
         cursor: default
 
